--- a/html/terms.html
+++ b/html/terms.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms</title>
   <link rel="stylesheet" href="../css/terms.css">
   <link rel="icon" href="../fotot/terms-icon.jpg">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
 
 <body id="rb-home-design">
-  
+
   <!--Header-->
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
@@ -22,10 +25,12 @@
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar"
+          aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
-            <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -35,47 +40,61 @@
                     <a href="../index.html" class="rb-index-menu"><i class="fa-solid fa-house"></i> Home</a>
                   </div>
                   <div class="col">
-                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-home-menu" data-bs-toggle="dropdown"></a>
+                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-home-menu"
+                      data-bs-toggle="dropdown"></a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
+                      <li><a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i>
+                          Video</a></li>
                     </ul>
-                  </div>  
+                  </div>
                 </div>
               </li>
-              <li class="rb-nav-item"> 
+              <li class="rb-nav-item">
                 <div class="row rb-nav-link">
                   <div class="col">
                     <a href="../html/about.html" class="rb-about"><i class="fa-solid fa-user"></i> About </a>
                   </div>
                   <div class="col">
-                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-about-menu" data-bs-toggle="dropdown"></a>
+                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-about-menu"
+                      data-bs-toggle="dropdown"></a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
-                      <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
-                      <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
+                      <li><a class="dropdown-item" href="../html/history.html"><i
+                            class="fa-solid fa-clock-rotate-left"></i> History </a></li>
+                      <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i>
+                          Designers</a></li>
+                      <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i>
+                          Experience</a></li>
                     </ul>
                   </div>
                 </div>
               </li>
               <li class="rb-nav-item">
-                <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+                <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i
+                    class="fa-solid fa-paint-roller"></i> Services</a>
+              </li>
               </li>
               <li class="rb-nav-item">
-                <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-              </li> 
+                <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i
+                    class="fa-regular fa-clipboard"></i> Terms</a>
+              </li>
+              </li>
               <li class="rb-nav-item">
-                <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
-              </li> 
-              <li class="rb-nav-item"> 
-                <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
-              </li> 
+                <a class="rb-nav-link nav-link text-dark" href="../html/contact.html"><i
+                    class="fa-solid fa-address-book"></i> Contact</a>
+              </li>
+              </li>
+              <li class="rb-nav-item">
+                <a class="rb-nav-link nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i>
+                  Login</a>
+              </li>
+              </li>
             </ul>
           </div>
         </div>
       </div>
     </nav>
   </header>
-  
+
   <!--Section-->
   <section id="rb-terms-section">
     <div class="container">
@@ -87,49 +106,55 @@
           <div class="rb-content">
             <div class="rb-box">
               <h3>Living room</h3>
-              <p>The living room should be comfortable, well-lit, stylishly decorated. Efficient organization and a clear focal point add value.</p>
+              <p>The living room should be comfortable, well-lit, stylishly decorated. Efficient organization and a
+                clear focal point add value.</p>
             </div>
             <div class="rb-box">
               <h3>Kitchen</h3>
-              <p>Designing a functional and suitable kitchen, including sufficient space for food preparation and storage for kitchen appliances.</p>
-            </div> 
+              <p>Designing a functional and suitable kitchen, including sufficient space for food preparation and
+                storage for kitchen appliances.</p>
+            </div>
             <div class="rb-box">
               <h3>Bedroom</h3>
-              <p>An ideal bedroom is a serene retreat with a comfortable bed, soft lighting, and personalized decor. Keep it clutter-free, and calming colors, and consider a cozy seating nook for relaxation.</p>
+              <p>An ideal bedroom is a serene retreat with a comfortable bed, soft lighting, and personalized decor.
+                Keep it clutter-free, and calming colors, and consider a cozy seating nook for relaxation.</p>
             </div>
             <div class="rb-box">
               <h3>Bathroom</h3>
-              <p>A well-equipped bathroom functionality with comfort. Quality fixtures, smart storage, and something aesthetics create a space that is both efficient and inviting.</p>
+              <p>A well-equipped bathroom functionality with comfort. Quality fixtures, smart storage, and something
+                aesthetics create a space that is both efficient and inviting.</p>
             </div>
           </div>
-         
+
           <hr>
           <div class="rb-section-text">
             <h1><i class="fa-solid fa-quote-right rb-font"></i> Arrangements</h1>
           </div>
-            <div class="rb-content">
-              <div class="rb-box">
-                <h3>Corridors and Common Spaces</h3>
-                <p>Ensure smooth movement and appropriate aesthetics for corridors and common spaces in the home. </p>
-              </div>
-              <div class="rb-box">
-                <h3>Effective Storage</h3>
-                <p>Well-organized storage space to maintain overall order and organization.</p>
-              </div>
-              <div class="rb-box">
-                <h3>Lighting and Ventilation</h3>
-                <p>Lighting to enhance the brightness and ventilation of the home.</p>
-              </div>
-              <div class="rb-box">
-                <h3>Exterior Aesthetics</h3>
-                <p>Attention to the external appearance of the house includes designing facades, landscaping, exterior lighting.</p>
-              </div>
+          <div class="rb-content">
+            <div class="rb-box">
+              <h3>Corridors and Common Spaces</h3>
+              <p>Ensure smooth movement and appropriate aesthetics for corridors and common spaces in the home. </p>
+            </div>
+            <div class="rb-box">
+              <h3>Effective Storage</h3>
+              <p>Well-organized storage space to maintain overall order and organization.</p>
+            </div>
+            <div class="rb-box">
+              <h3>Lighting and Ventilation</h3>
+              <p>Lighting to enhance the brightness and ventilation of the home.</p>
+            </div>
+            <div class="rb-box">
+              <h3>Exterior Aesthetics</h3>
+              <p>Attention to the external appearance of the house includes designing facades, landscaping, exterior
+                lighting.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    </div>
   </section>
+
 
   <!--Footer-->
   <footer>
@@ -137,60 +162,68 @@
       <div class="container text-center">
         <div class="row text-center">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
+            <h5 class="text-uppercase mt-3 mb-4 text-white ">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
             <p>
-              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design"
+                class="text-decoration-none text-white">Interactions</a>
             </p>
             <p>
-              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"
+                class="text-decoration-none text-white">Hosting</a>
             </p>
             <p>
-              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"
+                class="text-decoration-none text-white">Edition</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+            <h5 class="text-uppercase mt-3 mb-4 text-white">The sites</h5>
             <p>
-              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"
+                class="text-decoration-none text-white">Products</a>
             </p>
             <p>
-              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+              <a href="https://www.dwell.com/discover/interior%20design"
+                class="text-decoration-none text-white">Article</a>
             </p>
             <p>
               <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase">Social</h5>
+            <h5 class="text-uppercase mt-3">Social Media</h5>
             <p>
-              <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+              <a href="https://www.facebook.com/" class="text-decoration-none text-white">Facebook</a>
             </p>
             <p>
-              <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+              <a href="https://www.instagram.com/" class="text-decoration-none text-white">Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-              <i class="fa fa-envelope text-primary"></i> Mail</a>
+              <a href="https://www.gmail.com/" class="text-white text-decoration-none">GitHub</a>
             </p>
-          </div>
-          
-          <hr class="mb-6">
-          <div class="row align-items-center">
-            <div class="col-xs-12">
-              <p>&copy; Copyright 2024 All reserved by
-                <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
-              </p>
+            <div class="social-icons-wrapper">
+              <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.github.com/"><i class="fab fa-github"></i></a>
             </div>
+          </div>
+        </div>
+
+        <hr class="mb-6">
+        <div class="row align-items-center">
+          <div class="col-xs-12">
+            <p>&copy; Copyright 2025 All reserved by
+              <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
+            </p>
           </div>
         </div>
       </div>
     </footer>
   </footer>
-  
+
 </body>
+
 </html>
